Update code without sensitive data

--- a/docs-web/src/main/webapp/src/partial/docs/settings.config.html
+++ b/docs-web/src/main/webapp/src/partial/docs/settings.config.html
@@ -155,6 +155,42 @@
   </div>
 </form>
 
+<h2 translate="settings.config.title_llm"></h2>
+<form class="form-horizontal" name="llmForm" novalidate>
+  <div class="form-group" title="{{ 'settings.config.llm.api_key.help' | translate }}">
+    <label class="col-sm-2 control-label" for="llmApiKey">{{ 'settings.config.llm.api_key' | translate }}</label>
+    <div class="col-sm-7">
+      <input type="password" class="form-control" id="llmApiKey"
+             ng-model="llm.api_key" ng-required="true"
+             placeholder="{{ 'settings.config.llm.api_key.placeholder' | translate }}">
+    </div>
+  </div>
+  <div class="form-group" title="{{ 'settings.config.llm.model_name.help' | translate }}">
+    <label class="col-sm-2 control-label" for="llmModelName">{{ 'settings.config.llm.model_name' | translate }}</label>
+    <div class="col-sm-7">
+      <input type="text" class="form-control" id="llmModelName"
+             ng-model="llm.model_name" ng-required="true"
+             placeholder="{{ 'settings.config.llm.model_name.placeholder' | translate }}">
+    </div>
+  </div>
+  <div class="form-group" title="{{ 'settings.config.llm.api_base_url.help' | translate }}">
+    <label class="col-sm-2 control-label" for="llmApiBaseUrl">{{ 'settings.config.llm.api_base_url' | translate }}</label>
+    <div class="col-sm-7">
+      <input type="text" class="form-control" id="llmApiBaseUrl"
+             ng-model="llm.api_base_url" ng-required="true"
+             placeholder="{{ 'settings.config.llm.api_base_url.placeholder' | translate }}">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-primary"
+              ng-click="editLlmConfig()" ng-disabled="!llmForm.$valid">
+        <span class="fas fa-save"></span> {{ 'save' | translate }}
+      </button>
+    </div>
+  </div>
+</form>
+
 <h2 translate="settings.config.webhooks"></h2>
 <p translate="settings.config.webhooks_explain"></p>
 
